public abstract class Prototype {
    abstract Prototype myClone();
}
